--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.borderleft{
+    border-left: 4px solid white;
+    
+  &:hover{
+    border-left:4px solid rgb(60, 99, 239) ;
+  }
+    
+}
